--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>Odessey and Oracle</title>
     </head>
     <body>
-        <img src
+        <img src="albumlab/images/CoverArt.jpg"
+        alt="Album Cover"
+        style="width: 300px"/>
         <h1>Odessey and Oracle</h1>
         <h2>The Zombies</h2>
         <h3>April 19, 1968</h3>
