Volume3 Added CSS

--- a/index.html
+++ b/index.html
@@ -2,15 +2,106 @@
 <html>
     <head>
         <title>Odessey and Oracle</title>
+        <link href="albumstyles.css" 
+      rel="stylesheet" 
+      type="text/css"/>
+        <style>
+          table {
+        border-collapse: collapse;
+            }
+        </style>
     </head>
     <body>
-        <img src="albumlab/images/CoverArt.jpg"
+        <p>
+        <img src="images/CoverArt.jpg"
         alt="Album Cover"
         style="width: 300px"/>
+        </p>
+
         <h1>Odessey and Oracle</h1>
-        <h2>The Zombies</h2>
+        <h2><a href="http://www.thezombiesmusic.com/" target=_"blank">The Zombies</a></h2>
         <h3>April 19, 1968</h3>
-        <p>Odessey and Oracle was released in 1968 by English band The Zombies. Recordings took place in London at Abbey Road and Olympic Studios over the period of three months. This is the band's second studio album and has been ranked number 100 on Rolling Stone magazine's list of the 500 Greatest Albums of All Time.</p>
-        <h2>Band Members</h2>
+        <p>
+            Odessey and Oracle was released in 1968 by English band The Zombies. Recordings took place in London at Abbey Road and Olympic Studios over the period of three months. This is the band's second studio album and has been ranked number 100 on Rolling Stone magazine's list of the 500 Greatest Albums of All Time.
+        </p>
+        <hr>
+        <h2>Band Members and Producers</h2>
+        <ul>
+            <li>Colin Blunstone - Lead Vocals</li>
+            <li>Rod Argent - Organ; Piano; Harpsichord; Mellotron</li>
+            <li>Pat Atkinson - Guitar</li>
+            <li>Chris White - Bass Guitar</li>
+            <li>Hugh Grundy - Drums</li>
+            <li>Producers - The Zombies</li>
+        </ul>
+        <table border="1" width="100%">
+            <caption style="font-size: 20px">Tracks</caption>
+            <tr bgcolor="grey">
+                <br/>
+                <th>Track #</th>
+                <th>Track Title</th>
+                <th>Track Length</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Care of Cell 44</td>
+                <td>3:57</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>A Rose for Emily</td>
+                <td>2:19</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Maybe After He's Gone</td>
+                <td>2:34</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Beechwood Park</td>
+                <td>2:44</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Brief Candles</td>
+                <td>3:30</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Hung Up on a Dream</td>
+                <td>3:02</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Changes</td>
+                <td>3:20</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>I Want Her, She Wants Me</td>
+                <td>2:53</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>This Will Be Our Year</td>
+                <td>2:08</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Butcher's Tale</td>
+                <td>2:48</td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>Friends of Mine</td>
+                <td>2:18</td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Time of the Season</td>
+                <td>3:34</td>
+            </tr>
+        </table>
     </body>
 </html>
