--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="albumstyles.css" 
       rel="stylesheet" 
       type="text/css"/>
+      <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
         <style>
           table {
         border-collapse: collapse;
